force-app/main/default/objects/Campaign/fields/JobCity__c.field-meta.xml
<CustomField>
    <fullName>JobCity__c</fullName>
    <label>Job City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>