force-app/main/default/objects/Campaign/fields/JobCountry__c.field-meta.xml
<CustomField>
    <fullName>JobCountry__c</fullName>
    <label>Job Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>