force-app/main/default/objects/Campaign/fields/JobLatitude__c.field-meta.xml
<CustomField>
    <fullName>JobLatitude__c</fullName>
    <label>Job Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>