force-app/main/default/objects/Campaign/fields/JobLongitude__c.field-meta.xml
<CustomField>
    <fullName>JobLongitude__c</fullName>
    <label>Job Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>