force-app/main/default/objects/Campaign/fields/JobPostalCode__c.field-meta.xml
<CustomField>
    <fullName>JobPostalCode__c</fullName>
    <label>Job Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>