force-app/main/default/objects/Campaign/fields/JobState__c.field-meta.xml
<CustomField>
    <fullName>JobState__c</fullName>
    <label>Job State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>