force-app/main/default/objects/Campaign/fields/JobStreet__c.field-meta.xml
<CustomField>
    <fullName>JobStreet__c</fullName>
    <label>Job Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>